<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="always">
    <item
        android:id="@+id/menu"
        android:title="Menu"
        android:icon="@drawable/ic_baseline_menu_24"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/Select"
                android:icon="@drawable/ic_baseline_videogame_asset_24"
                android:title="@string/menu_item_play" />
            <item
                android:id="@+id/Score"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_baseline_auto_graph_24"
                android:title="@string/menu_item_scores" />
            <item
                android:id="@+id/Settings"
                app:showAsAction="ifRoom"
                android:title="@string/menu_item_settings"
                android:icon="@drawable/ic_baseline_settings_24"/>
            <item
                android:id="@+id/help"
                app:showAsAction="ifRoom"
                android:title="@string/menu_item_help"
                android:icon="@drawable/ic_baseline_help_24"/>
        </menu>
    </item>

</menu>