<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog"
    android:orientation="vertical">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/titan_one"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_msg"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/put_your_name"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/game_dialog_button_left"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/cancel"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/game_dialog_button_right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/new_game"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>