<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ece8e4"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/_2048_logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/titan_one"
        android:text="@string/play_new_game"
        android:textColor="#787266" />

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/titan_one"
        android:text="@string/manage_scores"
        android:textColor="#787266" />
</LinearLayout>