<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8f001a"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#003775"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/lights_out"
            android:textColor="#FFFFFF"
            android:textSize="49sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/easy" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/medium" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/hard" />

        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>