<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ece8e4"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/idString"
            android:textColor="#787266" />

        <EditText
            android:id="@+id/id_search"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingLeft="10dp"
            android:textColor="#787266"
            android:paddingStart="10dp"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/nameString"
            android:textColor="#787266" />

        <EditText
            android:id="@+id/new_name"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingLeft="10dp"
            android:textColor="#787266"
            android:paddingStart="10dp"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/scoreString"
            android:textColor="#787266" />

        <EditText
            android:id="@+id/new_score"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingLeft="10dp"
            android:textColor="#787266"
            android:paddingStart="10dp"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/timeString"
            android:textColor="#787266" />

        <EditText
            android:id="@+id/new_time"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingLeft="10dp"
            android:textColor="#787266"
            android:paddingStart="10dp"
            tools:ignore="LabelFor,RtlSymmetry,TextFields" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/update_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/titan_one"
            android:paddingLeft="10dp"
            android:text="@string/updateButton"
            android:textColor="#787266"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>


</LinearLayout>

