<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ece8e4"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textColor="#787266"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

        <com.example.lesson8menu.game2048test.ScoreBoxView
            android:id="@+id/main_actual_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/main_best_score"
            android:layout_toLeftOf="@id/main_best_score"
            custom:label_text="Score" />

        <com.example.lesson8menu.game2048test.ScoreBoxView
            android:id="@+id/main_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            custom:label_text="Best" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6"
            android:maxLines="2"
            android:text="@string/slogan"
            android:textColor="#787266"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_button_new_game"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/new_game"
            android:textColor="#787266"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <com.example.lesson8menu.game2048test.MatrixView
        android:id="@+id/matrix_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#787266"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#787266"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

