<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rio_murcia"
    tools:context="com.example.lesson8menu.MainActivity">

    <RelativeLayout
        android:id="@+id/Relative01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/imgTitulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/titulo1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/limon"
            tools:ignore="MissingConstraints,ImageContrastCheck"
            android:layout_alignParentLeft="true"
            android:layout_alignLeft="@id/titulo1" />

        <TextView
            android:id="@+id/titulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fascinate_inline"
            android:shadowColor="#A59393"
            android:text="@string/titulo1"
            android:textColor="#CC2323"
            android:textSize="@dimen/screen_title_size"
            tools:ignore="RelativeOverlap,SpUsage"

            />

        <TextView
            android:id="@+id/titulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/fascinate_inline"
            android:shadowColor="#A59393"
            android:text="@string/titulo2"
            android:textColor="#CC2323"
            android:textSize="@dimen/screen_title_size"
            tools:ignore="RelativeOverlap,SpUsage" />

        <ImageView
            android:id="@+id/imagTitulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/limon"
            tools:ignore="ImageContrastCheck" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Relative01"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/fondo"
        android:dividerHeight="10dp"
        android:padding="30dp" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list"
        android:src="@drawable/limon"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"  />

</RelativeLayout>